--- a/IHM/TD2/projet.html
+++ b/IHM/TD2/projet.html
@@ -38,7 +38,40 @@
           </form>
         </div>
       </nav>
-      <div id="footer">
+      <div class="jumbotron">
+          <h1 class="display-4">Notre projet</h1>
+          <p class="lead">KD Musique est un web d'écouter de chansons.</p>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col mb-4">
+            <div class="card">
+              <img src="image/two.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Les fonctionalités</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Notre but</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <form>
+          <div class="form-group">
+            <label for="formGroupExampleInput">Feedback</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+          </div>
+          <button type="submit" class="btn btn-primary" >Envoyer</button>
+        </form>
+      </div>  
+      
+      <div id="footer" >
         <p>Design by KUKU</p>
       </div>
     </div>
