--- a/IHM/TD2/contact.html
+++ b/IHM/TD2/contact.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="profil.html">Profil</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Contactl<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
