--- a/IHM/TD2/accueil.html
+++ b/IHM/TD2/accueil.html
@@ -32,12 +32,11 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
       </nav>
+      <h1 class="bienvenue"align="center ">BIENVENUE À KUKU MONDE</h1>
+    </div>
+    <div class="container">
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -45,16 +44,16 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="image/one.jpg" class="d-block"  width="1500px" height="700px" alt="...">
+            <img src="image/one.jpg" class="d-block w-100 "  alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>LES PROFILS</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="image/two.png" class="d-block" width="1500px" height="700px" alt="...">
+            <img src="image/two.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>KD MUSIQUE</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>C'est un notre projet.</p>
             </div>
           </div>
         </div>
@@ -67,13 +66,12 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      
+    </div>
+    <div class="container-fluid">
       <div id="footer">
         <p>Design by KUKU</p>
       </div>
-
     </div>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
