chinh sua TD2 lan thu 2

--- a/IHM/TD2/accueil.html
+++ b/IHM/TD2/accueil.html
@@ -53,7 +53,7 @@
             <img src="image/two.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>KD MUSIQUE</h5>
-              <p>C'est un notre projet.</p>
+              <p style="color: #252618; font-weight: bold; font-size: larger;">C'est un notre projet.</p>
             </div>
           </div>
         </div>
