chinh sua TD2 lan 3

--- a/IHM/TD2/contact.html
+++ b/IHM/TD2/contact.html
@@ -34,44 +34,44 @@
           </ul>
         </div>
       </nav>
-      <div class="row row-cols-1 row-cols-md-2">
+      <div class="row row-cols-1 row-cols-md-4">
         <div class="col mb-4">
-          <div class="card-contact">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card" style="width: 18rem;">
+            <img src="" class="card-img-top" alt="image">
             <div class="card-body">
               <h5 class="card-title">Đỗ Minh Khoa</h5>
               <p class="card-text">Numéro de téléphone: 0362603244</p>
-              <p class="card-text">Email: 18126021@student.hcmus.edu.vn</p>
+                <p class="card-text">Email: 18126021@student.hcmus.edu.vn</p>
             </div>
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card-contact">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card" style="width: 18rem;">
+            <img src="" class="card-img-top" alt="image">
             <div class="card-body">
               <h5 class="card-title">Trần Khánh Gia Uy</h5>
               <p class="card-text">Numéro de téléphone: 0941559273</p>
-              <p class="card-text">Email: 18126011@student.hcmus.edu.vn</p>
+                <p class="card-text">Email: 18126011@student.hcmus.edu.vn</p>
             </div>
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card-contact">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card" style="width: 18rem;">
+            <img src="" class="card-img-top" alt="image">
             <div class="card-body">
               <h5 class="card-title">Nguyễn Trọng Khang</h5>
               <p class="card-text">Numéro de téléphone: 835012200</p>
-              <p class="card-text">Email: 18126019@student.hcmus.edu.vn</p>
+                <p class="card-text">Email: 18126019@student.hcmus.edu.vn</p>
             </div>
           </div>
         </div>
         <div class="col mb-4">
-          <div class="card-contact">
-            <img src="image/one.jpg" class="card-img-top" alt="...">
+          <div class="card" style="width: 18rem;">
+            <img src="image/DU.jpg" class="card-img-top" alt="image">
             <div class="card-body">
               <h5 class="card-title">Phan Bình Duy Uyên</h5>
               <p class="card-text">Numéro de téléphone: 0776625766</p>
-              <p class="card-text">Email: 18126036@student.hcmus.edu.vn</p>
+                <p class="card-text">Email: 18126036@student.hcmus.edu.vn</p>
             </div>
           </div>
         </div>
