--- a/IHM/TD2/projet.html
+++ b/IHM/TD2/projet.html
@@ -34,48 +34,55 @@
           </ul>
         </div>
       </nav>
-      
       <div class="jumbotron text-center">
-          <h1 class="card-title">NOTRE PROJET</h1>
-          <p class="lead">KD Musique est un web d'écouter de chansons.</p>
+        <h1 class="card-title">NOTRE PROJET</h1>
+        <p class="lead">KD Musique est un web d'écouter de chansons.</p>
+      </div>
+      <div class="card" >
+        <div class="card-header">
+          <h2>Notre but</h2>         
         </div>
-    
+        <div class="card-body">
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+      </div>
     </div>
+
     <div class="container">
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="image/image1.jpg" class="d-block w-100" alt="image">
-            </div>
-            <div class="carousel-item">
-              <img src="image/image2.jpg" class="d-block w-100" alt="image">
-            </div>
-            <div class="carousel-item">
-              <img src="image/image3.jpg" class="d-block w-100" alt="image">
-            </div>
-            <div class="carousel-item">
-              <img src="image/image4.jpg" class="d-block w-100" alt="image">
-            </div>
-            <div class="carousel-item">
-              <img src="image/image5.jpg" class="d-block w-100" alt="image">
-            </div>
-            <div class="carousel-item">
-              <img src="image/image6.jpg" class="d-block w-100" alt="image">
-            </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="image/image1.jpg" class="d-block w-100" alt="image">
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+          <div class="carousel-item">
+            <img src="image/image2.jpg" class="d-block w-100" alt="image">
+          </div>
+          <div class="carousel-item">
+            <img src="image/image3.jpg" class="d-block w-100" alt="image">
+          </div>
+          <div class="carousel-item">
+            <img src="image/image4.jpg" class="d-block w-100" alt="image">
+          </div>
+          <div class="carousel-item">
+            <img src="image/image5.jpg" class="d-block w-100" alt="image">
+          </div>
+          <div class="carousel-item">
+            <img src="image/image6.jpg" class="d-block w-100" alt="image">
+          </div>
         </div>
-      </div>  
+        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
+
     <div class="container-fluid">
-      <div class="card" >
+       <div class="card" >
         <div class="card-header">
           <h2>Les fonctionalités</h2>
         </div>
@@ -92,31 +99,20 @@
           </ol>
         </div>
         <div class="card-footer text-muted">
-          2 days ago
+          <form>
+            <div class="form-group ">
+              <label for="formGroupExampleInput" style="color: #242426;"><b>Feedback</b></label>
+              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Vous voulez quoi?" width="50%">
+            </div>
+            <button type="button" class="btn btn-secondary">Envoyer</button>
+          </form>
         </div>
-      </div>
-
-      <div class="card" >
-        <div class="card-header">
-          <h2>Notre but</h2>         
-        </div>
-        <div class="card-body">
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        </div>
-      </div>
-      <form>
-        <div class="form-group ">
-          <label for="formGroupExampleInput">Feedback</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Vous voulez quoi?" width="50%">
-        </div>
-        <button type="button" class="btn btn-outline-secondary">Envoyer</button>
-      </form>
-      <div id="footer" >
+      </div> 
+      <div id="footer">
         <p>Design by KUKU</p>
-      </div>
+      </div>  
     </div>
-
-
+  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
