--- a/IHM/TD2/profil.html
+++ b/IHM/TD2/profil.html
@@ -32,9 +32,64 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
-        
         </div>
       </nav>
+      <div id="UyInfo">
+        <div class="media">
+          <img src="image/UT.jpg" class="mr-3" alt="..." width="150" height="170">
+          <div class="media-body">
+            <h5 class="name" style="font-style: italic;">Tran Khanh Gia Uy - Ulysse</h5>
+            <ul class="Info">
+              <li>Éducation: Université de Science - deuxième année</li>
+              <li>État civil: Célibataire</li>
+              <li>Losir: </li>
+              <li>Haine: </li>
+            </ul>
+          </div>
+        </div> 
+      </div>
+      <div id="UyenInfo">
+        <div class="media">
+          <img src="image/DU.jpg" class="mr-3" alt="..." width="150" height="170">
+          <div class="media-body">
+            <h5 class="name" style="font-style: italic;">Phan Binh Duy Uyen - Le nom en Francais</h5>
+            <ul class="Info"> 
+              <li>Éducation: Université de Science - deuxième année</li>
+              <li>État civil: Célibataire</li>
+              <li>Losir: </li>
+              <li>Haine: </li>
+            </ul>
+          </div>
+        </div> 
+      </div>
+      <div id="KhangInfo">
+        <div class="media">
+          <img src="image/TK-2.jpg" class="mr-3" alt="..." width="150" height="170">
+          <div class="media-body">
+            <h5 class="name" style="font-style: italic;">Nguyen Trong Khang - Le nom en Francais</h5>
+            <ul class="Info">
+              <li>Éducation: Université de Science - deuxième année</li>
+              <li>État civil: Célibataire</li>
+              <li>Losir: </li>
+              <li>Haine: </li>
+            </ul>
+          </div>
+        </div> 
+      </div>
+      <div id="KhoaInfo">
+        <div class="media">
+          <img src="image/UT.jpg" class="mr-3" alt="..." width="150" height="170">
+          <div class="media-body">
+            <h5 class="name" style="font-style: italic;">Do Minh Khoa - Le nom en Francais</h5>
+            <ul class="Info">
+              <li>Éducation: Université de Science - deuxième année</li>
+              <li>État civil: Célibataire</li>
+              <li>Losir: </li>
+              <li>Haine: </li>
+            </ul>
+          </div>
+        </div> 
+      </div>
       <div id="footer">
         <p>Design by KUKU</p>
       </div>
