--- a/IHM/TD2/accueil.html
+++ b/IHM/TD2/accueil.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Grenze+Gotisch&family=Lobster&display=swap" rel="stylesheet">
     <title>KUKU</title>
   </head>
   <body>
@@ -17,24 +18,21 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="accueil.html">KUKU</a>
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <a class="navbar-brand" href="accueil.html" style="font-family: 'Acme', sans-serif;">KUKU</a>
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0"style="font-family: 'Acme', sans-serif;">
             <li class="nav-item active">
-              <a class="nav-link" href="accueil.html">Accueil<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="accueil.html" >Accueil<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projet.html">Projet</a>
+              <a class="nav-link" href="projet.html" > Projet</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="profil.html">Profil</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="profil.html" >Profil</a>
             </li>
           </ul>
         </div>
       </nav>
-      <h1 class="bienvenue"align="center ">BIENVENUE À KUKU MONDE</h1>
+      <h1 class="bienvenue"align="center">BIENVENUE AU MONDE DE KUKU</h1>
     </div>
     <div class="container">
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -67,12 +65,71 @@
         </a>
       </div>
     </div>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="accueil.html">KUKU</a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="accueil.html">Accuei</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="projet.html">Projet</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="profil.html">Profil</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="row row-cols-1 row-cols-md-4" style="margin-top: 100px;">
+    <div class="col mb-4">
+      <div class="card" style="width: 24rem;">
+        <img src="image/KD.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Do Minh Khoa</h5>
+          <p class="card-text">Numéro de téléphone: 0362603244</p>
+            <p class="card-text">Email: 18126021@student.hcmus.edu.vn</p>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card" style="width: 24rem;">
+        <img src="image/UT.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Tran Khanh Gia Uy</h5>
+          <p class="card-text">Numéro de téléphone: 0941559273</p>
+            <p class="card-text">Email: 18126011@student.hcmus.edu.vn</p>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card" style="width: 24rem;">
+        <img src="image/TK-2.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Nguyen Trong Khang</h5>
+          <p class="card-text">Numéro de téléphone: 835012200</p>
+            <p class="card-text">Email: 18126019@student.hcmus.edu.vn</p>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card" style="width: 24rem;">
+        <img src="image/DU.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Phan Binh Duy Uyen</h5>
+          <p class="card-text">Numéro de téléphone: 0776625766</p>
+            <p class="card-text">Email: 18126036@student.hcmus.edu.vn</p>
+        </div>
+      </div>
+    </div>
+  </div>
     <div class="container-fluid">
       <div id="footer">
         <p>Design by KUKU</p>
       </div>
     </div>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
