--- a/IHM/TD2/profil.html
+++ b/IHM/TD2/profil.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Grenze+Gotisch&family=Lobster&display=swap" rel="stylesheet">
     <title>KUKU</title>
   </head>
   <body>
@@ -17,78 +18,77 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="accueil.html">KUKU</a>
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <a class="navbar-brand" href="accueil.html" style="font-family: 'Acme', sans-serif;">KUKU</a>
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0" style="font-family: 'Acme', sans-serif;"> 
             <li class="nav-item ">
-              <a class="nav-link" href="accueil.html">Accueil</a>
+              <a class="nav-link" href="accueil.html" >Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projet.html">Projet</a>
+              <a class="nav-link" href="projet.html" >Projet</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="profil.html">Profil<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="profil.html" >Profil<span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
       </nav>
-      <div id="UyInfo">
-        <div class="media">
-          <img src="image/UT.jpg" class="mr-3" alt="..." width="150" height="170">
-          <div class="media-body">
-            <h5 class="name" style="font-style: italic;">Tran Khanh Gia Uy - Ulysse</h5>
-            <ul class="Info">
-              <li>Éducation: Université de Science - deuxième année</li>
-              <li>État civil: Célibataire</li>
-              <li>Losir: </li>
-              <li>Haine: </li>
-            </ul>
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+          <div class="card">
+            <img src="image/KD.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Do Minh Khoa - Le nom en Francais</h5>
+              <ul class="Info">
+                <li>Éducation: Université de Science - deuxième année</li>
+                <li>État civil: Célibataire</li>
+                <li>Loisir: jouer le sport, manger les poulets</li>
+                <li>Haine: Le chili</li>
+              </ul>
+            </div>
           </div>
-        </div> 
-      </div>
-      <div id="UyenInfo">
-        <div class="media">
-          <img src="image/DU.jpg" class="mr-3" alt="..." width="150" height="170">
-          <div class="media-body">
-            <h5 class="name" style="font-style: italic;">Phan Binh Duy Uyen - Le nom en Francais</h5>
-            <ul class="Info"> 
-              <li>Éducation: Université de Science - deuxième année</li>
-              <li>État civil: Célibataire</li>
-              <li>Losir: </li>
-              <li>Haine: </li>
-            </ul>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="image/UT.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Tran Khanh Gia Uy - Ulysse</h5>
+              <ul class="Info">
+                <li>Éducation: Université de Science - deuxième année</li>
+                <li>État civil: Célibataire</li>
+                <li>Loisir: Écouter de la musique, Regarder le film</li>
+                <li>Haine: Les cafards</li>
+              </ul>
+            </div>
           </div>
-        </div> 
-      </div>
-      <div id="KhangInfo">
-        <div class="media">
-          <img src="image/TK-2.jpg" class="mr-3" alt="..." width="150" height="170">
-          <div class="media-body">
-            <h5 class="name" style="font-style: italic;">Nguyen Trong Khang - Le nom en Francais</h5>
-            <ul class="Info">
-              <li>Éducation: Université de Science - deuxième année</li>
-              <li>État civil: Célibataire</li>
-              <li>Losir: </li>
-              <li>Haine: </li>
-            </ul>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="image/TK-2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nguyen Trong Khang - Le nom en Francais</h5>
+              <ul class="Info">
+                <li>Éducation: Université de Science - deuxième année</li>
+                <li>État civil: Célibataire</li>
+                <li>Loisir: jouer les jeux vidéos</li>
+                <li>Haine: les serpents</li>
+              </ul>
+            </div>
           </div>
-        </div> 
-      </div>
-      <div id="KhoaInfo">
-        <div class="media">
-          <img src="image/UT.jpg" class="mr-3" alt="..." width="150" height="170">
-          <div class="media-body">
-            <h5 class="name" style="font-style: italic;">Do Minh Khoa - Le nom en Francais</h5>
-            <ul class="Info">
-              <li>Éducation: Université de Science - deuxième année</li>
-              <li>État civil: Célibataire</li>
-              <li>Losir: </li>
-              <li>Haine: </li>
-            </ul>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="image/DU.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Phan Binh Duy Uyen - Le nom en Francais</h5>
+              <ul class="Info">
+                <li>Éducation: Université de Science - deuxième année</li>
+                <li>État civil: Célibataire</li>
+                <li>Loisir: Lire les livres</li>
+                <li>Haine: les insectes</li>
+              </ul>
+            </div>
           </div>
-        </div> 
+        </div>
       </div>
       <div id="footer">
         <p>Design by KUKU</p>
