--- a/IHM/TD2/projet.html
+++ b/IHM/TD2/projet.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Grenze+Gotisch&family=Lobster&display=swap" rel="stylesheet">
     <title>KUKU</title>
   </head>
   <body>
@@ -17,8 +18,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="accueil.html">KUKU</a>
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <a class="navbar-brand" href="accueil.html" style="font-family: 'Acme', sans-serif;">KUKU</a>
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0" style="font-family: 'Acme', sans-serif;">
             <li class="nav-item ">
               <a class="nav-link" href="accueil.html">Accueil</a>
             </li>
@@ -28,9 +29,6 @@
             <li class="nav-item" >
               <a class="nav-link" href="profil.html">Profil</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
           </ul>
         </div>
       </nav>
@@ -38,17 +36,7 @@
         <h1 class="card-title">NOTRE PROJET</h1>
         <p class="lead">KD Musique est un web d'écouter de chansons.</p>
       </div>
-      <div class="card" >
-        <div class="card-header">
-          <h2>Notre but</h2>         
-        </div>
-        <div class="card-body">
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
+      
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -79,10 +67,15 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div>
-
-    <div class="container-fluid">
-       <div class="card" >
+      <div class="card" >
+        <div class="card-header">
+          <h2>Notre but</h2>         
+        </div>
+        <div class="card-body">
+          <p class="card-text">Fournir aux utilisateurs des outils pour écouter de la musique en ligne</p>
+        </div>
+      </div>
+      <div class="card">
         <div class="card-header">
           <h2>Les fonctionalités</h2>
         </div>
@@ -112,6 +105,8 @@
         <p>Design by KUKU</p>
       </div>  
     </div>
+
+    
   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
