chinh sua TD2 lan thu 50

--- a/IHM/TD2/accueil.html
+++ b/IHM/TD2/accueil.html
@@ -42,13 +42,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="image/one.jpg" class="d-block w-100 "  alt="...">
+            <img src="image/one.jpg" class="d-block w-100 "  alt="image">
             <div class="carousel-caption d-none d-md-block">
               <h5>LES PROFILS</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="image/two.png" class="d-block w-100" alt="...">
+            <img src="image/two.png" class="d-block w-100" alt="image">
             <div class="carousel-caption d-none d-md-block">
               <h5>KD MUSIQUE</h5>
               <p style="color: #252618; font-weight: bold; font-size: larger;">C'est un notre projet.</p>
@@ -65,27 +65,11 @@
         </a>
       </div>
     </div>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="accueil.html">KUKU</a>
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="accueil.html">Accuei</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="projet.html">Projet</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="profil.html">Profil</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
   </nav>
-  <div class="row row-cols-1 row-cols-md-4" style="margin-top: 100px;">
-    <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+  <h1 class="bienvenue"align="center" style="margin-top: 2em;">NOTRE CONTACT</h1>
+  <div class="row row-cols-1 row-cols-md-4" style="margin-top: 40px;">
+    <div class="col mb-1">
+      <div class="card" >
         <img src="image/KD.jpg" class="card-img-top" alt="image">
         <div class="card-body">
           <h5 class="card-title">Do Minh Khoa</h5>
@@ -94,8 +78,8 @@
         </div>
       </div>
     </div>
-    <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+    <div class="col mb-1">
+      <div class="card" >
         <img src="image/UT.jpg" class="card-img-top" alt="image">
         <div class="card-body">
           <h5 class="card-title">Tran Khanh Gia Uy</h5>
@@ -104,8 +88,8 @@
         </div>
       </div>
     </div>
-    <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+    <div class="col mb-1">
+      <div class="card" >
         <img src="image/TK-2.jpg" class="card-img-top" alt="image">
         <div class="card-body">
           <h5 class="card-title">Nguyen Trong Khang</h5>
@@ -114,8 +98,8 @@
         </div>
       </div>
     </div>
-    <div class="col mb-4">
-      <div class="card" style="width: 24rem;">
+    <div class="col mb-1">
+      <div class="card" >
         <img src="image/DU.jpg" class="card-img-top" alt="image">
         <div class="card-body">
           <h5 class="card-title">Phan Binh Duy Uyen</h5>
