--- a/IHM/TD2/profil.html
+++ b/IHM/TD2/profil.html
@@ -32,16 +32,17 @@
           </ul>
         </div>
       </nav>
+      <h1 class="bienvenue"align="center">NOTRE PROFIL</h1>
       <div class="row row-cols-1 row-cols-md-2">
         <div class="col mb-4">
           <div class="card">
-            <img src="image/KD.jpg" class="card-img-top" alt="...">
+            <img src="image/KD.jpg" class="card-img-top" alt="image">
             <div class="card-body">
-              <h5 class="card-title">Do Minh Khoa - Le nom en Francais</h5>
+              <h5 class="card-title">Do Minh Khoa - Dubois</h5>
               <ul class="Info">
                 <li>Éducation: Université de Science - deuxième année</li>
                 <li>État civil: Célibataire</li>
-                <li>Loisir: jouer le sport, manger les poulets</li>
+                <li>Loisir: Jouer le sport, Manger les poulets</li>
                 <li>Haine: Le chili</li>
               </ul>
             </div>
@@ -49,7 +50,7 @@
         </div>
         <div class="col mb-4">
           <div class="card">
-            <img src="image/UT.jpg" class="card-img-top" alt="...">
+            <img src="image/UT.jpg" class="card-img-top" alt="image">
             <div class="card-body">
               <h5 class="card-title">Tran Khanh Gia Uy - Ulysse</h5>
               <ul class="Info">
@@ -63,13 +64,13 @@
         </div>
         <div class="col mb-4">
           <div class="card">
-            <img src="image/TK-2.jpg" class="card-img-top" alt="...">
+            <img src="image/TK-2.jpg" class="card-img-top" alt="image">
             <div class="card-body">
               <h5 class="card-title">Nguyen Trong Khang - Le nom en Francais</h5>
               <ul class="Info">
                 <li>Éducation: Université de Science - deuxième année</li>
                 <li>État civil: Célibataire</li>
-                <li>Loisir: jouer les jeux vidéos</li>
+                <li>Loisir: Jouer les jeux vidéos</li>
                 <li>Haine: les serpents</li>
               </ul>
             </div>
@@ -77,9 +78,9 @@
         </div>
         <div class="col mb-4">
           <div class="card">
-            <img src="image/DU.jpg" class="card-img-top" alt="...">
+            <img src="image/DU.jpg" class="card-img-top" alt="image">
             <div class="card-body">
-              <h5 class="card-title">Phan Binh Duy Uyen - Le nom en Francais</h5>
+              <h5 class="card-title">Phan Binh Duy Uyen - Amélie</h5>
               <ul class="Info">
                 <li>Éducation: Université de Science - deuxième année</li>
                 <li>État civil: Célibataire</li>
