--- a/IHM/TD2/projet.html
+++ b/IHM/TD2/projet.html
@@ -32,14 +32,17 @@
           </ul>
         </div>
       </nav>
-      <div class="jumbotron text-center">
+      <div class="jumbotron text-center" style="margin-top: 3px;">
         <h1 class="card-title">NOTRE PROJET</h1>
         <p class="lead">KD Musique est un web d'écouter de chansons.</p>
       </div>
       
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-        <div class="carousel-inner">
+        <div class="carousel-inner" style="margin-top: 2px;">
           <div class="carousel-item active">
+            <img src="image/two.png" class="d-block w-100" alt="image">
+          </div>
+          <div class="carousel-item">
             <img src="image/image1.jpg" class="d-block w-100" alt="image">
           </div>
           <div class="carousel-item">
