--- a/IHM/TD2/accueil.html
+++ b/IHM/TD2/accueil.html
@@ -43,9 +43,9 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="image/one.jpg" class="d-block w-100 "  alt="image">
-            <div class="carousel-caption d-none d-md-block">
+            <!-- <div class="carousel-caption d-none d-md-block">
               <h5>LES PROFILS</h5>
-            </div>
+            </div> -->
           </div>
           <div class="carousel-item">
             <img src="image/two.png" class="d-block w-100" alt="image">
@@ -73,7 +73,7 @@
         <img src="image/KD.jpg" class="card-img-top" alt="image">
         <div class="card-body">
           <h5 class="card-title">Do Minh Khoa</h5>
-          <p class="card-text">Numéro de téléphone: 0362603244</p>
+          <p class="card-text">Numéro de téléphone: 0362.603.244</p>
             <p class="card-text">Email: 18126021@student.hcmus.edu.vn</p>
         </div>
       </div>
@@ -83,7 +83,7 @@
         <img src="image/UT.jpg" class="card-img-top" alt="image">
         <div class="card-body">
           <h5 class="card-title">Tran Khanh Gia Uy</h5>
-          <p class="card-text">Numéro de téléphone: 0941559273</p>
+          <p class="card-text">Numéro de téléphone: 0941.559.273</p>
             <p class="card-text">Email: 18126011@student.hcmus.edu.vn</p>
         </div>
       </div>
@@ -93,7 +93,7 @@
         <img src="image/TK-2.jpg" class="card-img-top" alt="image">
         <div class="card-body">
           <h5 class="card-title">Nguyen Trong Khang</h5>
-          <p class="card-text">Numéro de téléphone: 835012200</p>
+          <p class="card-text">Numéro de téléphone: 0835.012.200</p>
             <p class="card-text">Email: 18126019@student.hcmus.edu.vn</p>
         </div>
       </div>
@@ -103,7 +103,7 @@
         <img src="image/DU.jpg" class="card-img-top" alt="image">
         <div class="card-body">
           <h5 class="card-title">Phan Binh Duy Uyen</h5>
-          <p class="card-text">Numéro de téléphone: 0776625766</p>
+          <p class="card-text">Numéro de téléphone: 0776.625.766</p>
             <p class="card-text">Email: 18126036@student.hcmus.edu.vn</p>
         </div>
       </div>
