update menu bar

--- a/IHM/KDMUSIQUE/test.html
+++ b/IHM/KDMUSIQUE/test.html
@@ -84,16 +84,38 @@
 
         <div class="playZone">
             <div class="wrapPlay">
-                <div class="wrapInfo">
-                    <img src="icon/cover.jpg">
-                    <p id="title">Danse</p>
-                    <p id="artist">Lomepal</p>
-                    <img src="icon/Favourite.png">
+                <div class="wrap">
+                    <div class="wrapInfo">
+                        <img src="icon/cover.jpg">
+                        <p id="infoSong">
+                            Danse
+                            <br>
+                            Lomepal
+                        </p>
+                        <img src="icon/Favourite.png" id="like">
+                    </div>
+                    <div class="playBar">
+                        <img src="icon/play.png">
+                        <progress id="progress" value="32" max="100"> 32% </progress>
+                    </div>
                 </div>
-                <div class="playBar">
-                    
-                </div>
-                
+            </div>
+
+            <div class="wrapLyrics">
+                <label>Danse</label>
+                <p class="artist">Lomepal</p>
+                <p id="lyrics">Hey, j'repensais à...
+                    Yeah
+                    Fais la cour aux femmes
+                    Je fais la cour aux femmes
+                    Hey, hey, yeah
+                    On l'a fait dans le sofa
+                    Je l'ai fait dans l'œsophage
+                    Hey, hey
+                    Pauvre de moi, j'me souvenais pas
+                    Qu'on avait le pouvoir de danser comme ça
+                    Quand on se laisse aller, laisse-toi aller
+                    Laisse nos énergies faire, </p>
             </div>
         </div>
     </div>
