update menubar and lyrics

--- a/IHM/KDMUSIQUE/test.html
+++ b/IHM/KDMUSIQUE/test.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="playBar">
                         <img src="icon/play.png">
-                        <progress id="progress" value="32" max="100"> 32% </progress>
+                        <progress value="32" max="100"> 32% </progress>
                     </div>
                 </div>
             </div>
@@ -105,17 +105,27 @@
                 <label>Danse</label>
                 <p class="artist">Lomepal</p>
                 <p id="lyrics">Hey, j'repensais à...
+                    <br>
                     Yeah
-                    Fais la cour aux femmes
-                    Je fais la cour aux femmes
-                    Hey, hey, yeah
-                    On l'a fait dans le sofa
-                    Je l'ai fait dans l'œsophage
-                    Hey, hey
-                    Pauvre de moi, j'me souvenais pas
-                    Qu'on avait le pouvoir de danser comme ça
-                    Quand on se laisse aller, laisse-toi aller
-                    Laisse nos énergies faire, </p>
+                    <br>
+                    Fais la cour aux femmes <br>
+                    Je fais la cour aux femmes <br>
+                    Hey, hey, yeah <br>
+                    On l'a fait dans le sofa <br>
+                    Je l'ai fait dans l'œsophage <br>
+                    Hey, hey <br>
+                    Pauvre de moi, j'me souvenais pas <br>
+                    Qu'on avait le pouvoir de danser comme ça <br>
+                    Quand on se laisse aller, laisse-toi aller <br>
+                    Laisse nos énergies faire, je veux plus parler <br>
+                    Je donnerais tout ce que j'ai sur moi <br>
+                    Juste pour te voir danser encore une fois <br>
+                    Quand tu te laisses aller, laisse-toi aller <br>
+                    Oublie les autres connards qui te regardent, yeah <br>
+                    Malgré la lumière, on ne voit plus que nous <br>
+                    La musique s'est arrêtée, les aiguilles se figent et je sens, je te sens <br>
+                    Malgré la lumière, on ne voit plus que nous <br>
+                    La musique s'est arrêtée, les aiguilles se figent et je sens, je te sens</p>
             </div>
         </div>
     </div>
