--- a/IHM/KDMUSIQUE/accueil.html
+++ b/IHM/KDMUSIQUE/accueil.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <!--CSS-->
     <link rel="stylesheet" href="css/accueil.css">
-
+    <link rel="stylesheet" href="css/test.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
