--- a/IHM/KDMUSIQUE/test.html
+++ b/IHM/KDMUSIQUE/test.html
@@ -18,7 +18,15 @@
                 <img src="images/logo.png" alt="image" style="width:45px; height:45px;">
             </a>
             
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="searchhd">
+            <!--Search và micro-->
+            <div class="input-group  mr-sm-2" id="searchhd">
+                <input class="form-control" type="search" placeholder="Search" aria-label="Search"  >
+                <div class="input-group-append">
+                    <button type="button" class="btn btn-light" >
+                        <i class="fa fa-microphone"></i>
+                    </button>
+                </div>
+            </div>
             <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
                 <i class="fa fa-search"></i>
             </button>
