--- a/IHM/KDMUSIQUE/test.html
+++ b/IHM/KDMUSIQUE/test.html
@@ -22,7 +22,7 @@
             <div class="input-group  mr-sm-2" id="searchhd">
                 <input class="form-control" type="search" placeholder="Search" aria-label="Search"  >
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-light" >
+                    <button type="button" class="btn btn-light"style="box-shadow: 0 0;" >
                         <i class="fa fa-microphone"></i>
                     </button>
                 </div>
@@ -139,7 +139,7 @@
     </div>
 
     <!--FOOTER-->
-    <div id="footer" class="container-fluid">
+    <div id="footer" >
         <div id="contentft" class="row">
             <!--LOGO và cre-->
             <div class="col-5">
